semantics/path/test/snapshots/better_api_semantics__path__test__part__empty_parameter.snap
---
source: semantics/path/test/part.rs
expression: diagnostics
---
[
    Report {
        severity: Error,
        title: "empty path parameter",
        labels: [
            Label {
                style: Primary,
                message: "empty path parameter",
                span: Span {
                    start: 6,
                    end: 8,
                },
            },
        ],
        note: Some(
            "help: path parameter has to have a name",
        ),
    },
]
