semantics/path/test/snapshots/better_api_semantics__path__test__part__invalid_chars_in_path.snap
---
source: semantics/path/test/part.rs
expression: diagnostics
---
[
    Report {
        severity: Error,
        title: "path contains invalid characters",
        labels: [
            Label {
                style: Primary,
                message: "path contains invalid characters",
                span: Span {
                    start: 0,
                    end: 14,
                },
            },
        ],
        note: Some(
            "help: path has to be an absolute path that can contain parameters `{param_name}`. See RFC 3986 for what valid path characters are",
        ),
    },
]
