semantics/path/test/snapshots/better_api_semantics__path__test__part__invalid_url_escape_non_hex.snap
---
source: semantics/path/test/part.rs
expression: diagnostics
---
[
    Report {
        severity: Error,
        title: "path contains invalid escape sequences",
        labels: [
            Label {
                style: Primary,
                message: "path contains invalid escape sequences",
                span: Span {
                    start: 0,
                    end: 10,
                },
            },
        ],
        note: Some(
            "help: valid escape sequence in path is `% HEXDIG HEXDIG` where `HEXDIG` is hexadecimal digit.",
        ),
    },
]
